--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
   "version": "0.1.0",
   "private": true,
   "scripts": {
-    "dev": "next dev -p 3001",
+    "dev": "next dev -p 3002",
     "build": "next build",
     "start": "next start",
     "lint": "next lint"
@@ -18,6 +18,7 @@
     "react-dom": "^19.0.0",
     "react-redux": "^9.2.0",
     "recharts": "^3.2.1",
+    "redux-persist": "^6.0.0",
     "socket.io-client": "^4.8.1"
   },
   "devDependencies": {
