--- a/package.json
+++ b/package.json
@@ -10,11 +10,13 @@
   },
   "dependencies": {
     "@reduxjs/toolkit": "^2.8.2",
+    "@types/react-datepicker": "^6.2.0",
     "date-fns": "^4.1.0",
     "lightweight-charts": "^4.2.3",
     "lucide-react": "^0.539.0",
     "next": "15.3.5",
     "react": "^19.0.0",
+    "react-datepicker": "^9.0.0",
     "react-dom": "^19.0.0",
     "react-redux": "^9.2.0",
     "recharts": "^3.2.1",
