--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -11,7 +11,10 @@ services:
       - "3002:3000"
     environment:
       - NODE_ENV=production
-      - NEXT_PUBLIC_TRADING_BOT_API=${NEXT_PUBLIC_TRADING_BOT_API}
+      - NEXT_PUBLIC_BACKEND_URL=http://146.59.93.94:3000
+      - NEXT_PUBLIC_API_BASE_URL=http://146.59.93.94:3000
+      - NEXT_PUBLIC_WS_URL=http://146.59.93.94:3000
+      - NEXT_PUBLIC_API_URL=http://146.59.93.94:3000
     networks:
       - crypto-network
 
