--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -5,16 +5,21 @@ services:
     build:
       context: .
       dockerfile: Dockerfile
+      args:
+        - NEXT_PUBLIC_BACKEND_URL=http://localhost:3000
+        - NEXT_PUBLIC_API_BASE_URL=http://localhost:3000
+        - NEXT_PUBLIC_WS_URL=http://localhost:3000/
+        - NEXT_PUBLIC_API_URL=http://localhost:3000/
     container_name: crypto-frontend
     restart: unless-stopped
     ports:
       - "3002:3000"
     environment:
       - NODE_ENV=production
-      - NEXT_PUBLIC_BACKEND_URL=http://host.docker.internal:3000
-      - NEXT_PUBLIC_API_BASE_URL=http://host.docker.internal:3000
-      - NEXT_PUBLIC_WS_URL=http://host.docker.internal:3000
-      - NEXT_PUBLIC_API_URL=http://host.docker.internal:3000
+      - NEXT_PUBLIC_BACKEND_URL=http://localhost:3000
+      - NEXT_PUBLIC_API_BASE_URL=http://localhost:3000
+      - NEXT_PUBLIC_WS_URL=http://localhost:3000/
+      - NEXT_PUBLIC_API_URL=http://localhost:3000/
     networks:
       - crypto-network
 
