--- a/package.json
+++ b/package.json
@@ -9,13 +9,19 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@emotion/react": "^11.14.0",
+    "@emotion/styled": "^11.14.1",
+    "@mui/material": "^7.3.6",
+    "@mui/x-charts": "^8.22.0",
     "@reduxjs/toolkit": "^2.8.2",
     "@types/react-datepicker": "^6.2.0",
+    "chart.js": "^4.5.1",
     "date-fns": "^4.1.0",
     "lightweight-charts": "^4.2.3",
     "lucide-react": "^0.539.0",
     "next": "15.3.5",
     "react": "^19.0.0",
+    "react-chartjs-2": "^5.3.1",
     "react-datepicker": "^9.0.0",
     "react-dom": "^19.0.0",
     "react-redux": "^9.2.0",
